src/custom/grid-leadership.css
@layer components {
	/* Bio expansion behavior on mobile devices. */
	[data-bio] {
		display: grid;
		grid-template-rows: 0fr;
		transition: grid-template-rows 0.3s ease;
	}

	[data-bio].open {
		grid-template-rows: 1fr;
		padding: 2rem 0;
	}

	[data-bio] > * {
		@apply overflow-hidden;
	}

	[data-bio-container] {
		@apply absolute z-30 col-span-1 xl:col-span-2;
	}

	/* Overlay and active state styling */
	/* 
		Could not get this to work for .grid-cover without using a class even though other stuff 
		that is built the same way works fine. 
	*/
	.grid-cover {
		@apply absolute inset-0 -z-10 bg-white opacity-0 transition-opacity duration-300;
	}
	[data-leadership].has-active .grid-cover {
		z-index: 10;
		opacity: 0.8;
	}

	[data-leadership].has-active [data-card] {
		@apply transition-transform duration-300;
	}

	[data-leadership].has-active [data-card]:not(.active) {
		@apply scale-[0.98] transform;
	}

	[data-leadership].has-active [data-card].active {
		@apply relative z-20 scale-[1.02] transform;
	}
}

